--- a/webapi/index.html
+++ b/webapi/index.html
@@ -15,6 +15,7 @@
     <div class="col-md-12">
         <form>
             <div class="form-group">
+                文字を入力<br>
                 <textarea id="text" name="text" cols="30" rows="10" class="form-control" ></textarea>
             </div>
 
