--- a/webapi/index.html
+++ b/webapi/index.html
@@ -18,7 +18,7 @@
                 文字を入力<br>
                 <textarea id="text" name="text" cols="30" rows="10" class="form-control" ></textarea>
             </div>
-
+            下記ボタン押して話す<br>
             <textarea id="result_text" cols="100" rows="10" class="form-control"></textarea>
             <br>
             <input id="record" type="button" value="Start Listen" class="btn btn-primary" />
