--- a/webapi/index.html
+++ b/webapi/index.html
@@ -22,6 +22,7 @@
             <textarea id="result_text" cols="100" rows="10" class="form-control"></textarea>
             <br>
             <input id="record" type="button" value="Start Listen" class="btn btn-primary" />
+            <input id="stop" type="button" value="Stop" class="btn btn-warning" />
         </form>
     </div>
 </div>
